--- a/Presentation.StudentCRUD/appsettings.json
+++ b/Presentation.StudentCRUD/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "https://localhost:7134",
+    "Audience": "https://localhost:7134",
+    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3"
+  }
 }
